--- a/Probando/Probando/Probando.csproj
+++ b/Probando/Probando/Probando.csproj
@@ -100,15 +100,15 @@
     <Content Include="Cursos.html" />
     <Content Include="Descargas.html" />
     <Content Include="Images\acercaDe.png" />
-    <Content Include="Images\computacion.jpg" />
-    <Content Include="Images\contacto.jpg" />
-    <Content Include="Images\Cursos.png" />
-    <Content Include="Images\Downloads.jpeg" />
+    <Content Include="Images\computacion.PNG" />
+    <Content Include="Images\contacto.png" />
+    <Content Include="Images\Cursos.PNG" />
+    <Content Include="Images\Downloads.PNG" />
     <Content Include="Images\Objetivos.png" />
-    <Content Include="Images\pasatiempos.png" />
+    <Content Include="Images\pasatiempos.PNG" />
     <Content Include="Images\PicsArt_04-25-10.39.24.jpg" />
-    <Content Include="Images\Porqué.png" />
-    <Content Include="Images\Prof.jpeg" />
+    <Content Include="Images\Prof.PNG" />
+    <Content Include="Images\Why.png" />
     <Content Include="Objetivos.html" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
